--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,41 @@ services:
     networks:
       - postgres
 
+  migration:
+    build:
+      context: "."
+      dockerfile: Dockerfile
+    env_file:
+      - .env.docker
+    depends_on:
+      - postgres_db
+    volumes:
+      - .:/docker_app
+    networks:
+      - postgres
+    command: alembic upgrade head
+
+  uvicorn:
+    build:
+      context: "."
+      dockerfile: Dockerfile
+      args:
+        HTTP_PORT: ${HTTP_PORT}
+    container_name: uvicorn_server
+    restart: always
+    env_file:
+      - .env.docker
+    depends_on:
+      - postgres_db
+      - migration
+    volumes:
+      - .:/docker_app
+    ports:
+      - ${HTTP_PORT}:${HTTP_PORT}
+    networks:
+      - postgres
+    command: uvicorn main:app --host 0.0.0.0 --port ${HTTP_PORT}
+
 networks:
   postgres:
     driver: bridge
