--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,11 @@ services:
       - ${DB_PORT}:5432
     networks:
       - postgres
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   migration:
     build:
@@ -22,7 +27,8 @@ services:
     env_file:
       - .env.docker
     depends_on:
-      - postgres_db
+      postgres_db:
+        condition: service_healthy
     volumes:
       - .:/docker_app
     networks:
@@ -40,8 +46,10 @@ services:
     env_file:
       - .env.docker
     depends_on:
-      - postgres_db
-      - migration
+      migration:
+        condition: service_started
+      postgres_db:
+        condition: service_healthy
     volumes:
       - .:/docker_app
     ports:
